test/error/MainPrivate.fu
public static class Test
{
	static void Main() //ERROR: 'Main' method must be 'public static'
	{
	}
}

